# DetectTheLineEnding

./: CLRF.sln  CMakeLists.txt  README.md
CLRF/: CLRF.cpp  CLRF.vcxproj  CLRF.vcxproj.filters
src/: CRLF.cpp
